# dartlingvo

./: peek_lsd.dart  profile_lsd.dart  pubspec.yaml  test_lsd_correctness.dart  test_lsd_decoder.dart  test_lsd_time.dart
android/app/: build.gradle.kts
dartlingvo/: .gitignore  README.md  peek_lt.dart  test_lsd_debug.dart
dartlingvo/ios/Runner/: Info.plist
dartlingvo/lib/pages/: home_page.dart
dartlingvo/lib/widgets/: settings_page.dart  word_list.dart
dartlingvo/linux/runner/: my_application.cc
dartlingvo/macos/Runner.xcodeproj/: project.pbxproj
dartlingvo/native/: CMakeLists.txt  build_windows.bat
dartlingvo/test/core/: navigation_history_test.dart
dartlingvo/web/: manifest.json
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/managers/: dictionary_manager.dart  lookup_tab_manager.dart  navigation_history.dart
lib/core/models/: dictionary.dart  dictionary_cache_snapshot.dart  dictionary_entry.dart  dictionary_index_snapshot.dart  formatted_text.dart  lookup_tab.dart  (+1 more)
lib/pages/: home_page.dart
lib/state/: app_state.dart
lib/widgets/: dictionary_selector.dart  entry_viewer.dart  lookup_tabs_bar.dart  navigation_buttons.dart  search_bar_widget.dart  settings_page.dart  word_list.dart
linux/: CMakeLists.txt
macos/Runner/: Info.plist
native/: lsd_c_wrapper.c  lsd_c_wrapper.h
test/core/: dsl_parser_test.dart  word_index_test.dart
tool/: lsd_probe.dart  probe_lsd_overlay.dart
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+16 files in other folders)
